// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Braze Cloud Mode (Actions) trackEvent should require one of braze_id, user_alias, or external_id 1`] = `"One of \\"external_id\\" or \\"user_alias\\" or \\"braze_id\\" is required."`;

exports[`Braze Cloud Mode (Actions) trackEvent should work with batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
    "x-braze-batch": Array [
      "true",
    ],
  },
}
`;

exports[`Braze Cloud Mode (Actions) trackEvent should work with batched events with single element 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Braze Cloud Mode (Actions) trackEvent should work with default mappings 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Braze Cloud Mode (Actions) trackEvent should work with default mappings 2`] = `
Object {
  "events": Array [
    Object {
      "_update_existing_only": false,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "external_id": "user1234",
      "name": "Test Event",
      "properties": Object {},
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
  ],
}
`;

exports[`Braze Cloud Mode (Actions) trackPurchase should combine custom product properties with event properties 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Braze Cloud Mode (Actions) trackPurchase should require one of braze_id, user_alias, or external_id 1`] = `"One of \\"external_id\\" or \\"user_alias\\" or \\"braze_id\\" is required."`;

exports[`Braze Cloud Mode (Actions) trackPurchase should work with default mappings 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Braze Cloud Mode (Actions) updateUserProfile should require one of braze_id, user_alias, or external_id 1`] = `"One of \\"external_id\\" or \\"user_alias\\" or \\"braze_id\\" is required."`;

exports[`Braze Cloud Mode (Actions) updateUserProfile should work with default mappings 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Braze Cloud Mode (Actions) updateUserProfile should work with default mappings 2`] = `
Object {
  "attributes": Array [
    Object {
      "_update_existing_only": false,
      "braze_id": undefined,
      "country": "United States",
      "current_location": Object {
        "latitude": 40.2964197,
        "longitude": -76.9411617,
      },
      "date_of_first_session": undefined,
      "date_of_last_session": undefined,
      "dob": undefined,
      "email": undefined,
      "email_click_tracking_disabled": undefined,
      "email_open_tracking_disabled": undefined,
      "email_subscribe": undefined,
      "external_id": "user1234",
      "facebook": undefined,
      "first_name": undefined,
      "gender": undefined,
      "home_city": undefined,
      "image_url": undefined,
      "language": undefined,
      "last_name": undefined,
      "marked_email_as_spam_at": undefined,
      "phone": undefined,
      "push_subscribe": undefined,
      "push_tokens": undefined,
      "time_zone": undefined,
      "twitter": undefined,
      "user_alias": undefined,
    },
  ],
}
`;
